# ctfd-sdk

./: .gitignore  README.md  pyproject.toml
ctfd_sdk/: __init__.py  api.py  settings.py
